# Perdoo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  prek.toml  pylock.toml  pyproject.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linting.yaml  publishing.yaml  rich-codex.yaml  testing.yaml
perdoo/: __init__.py  __main__.py  comic.py  console.py  main.py  processing.py  settings.py  utils.py
perdoo/archives/: __init__.py  _base.py  cb7.py  cbr.py  cbt.py  cbz.py  zipfile_remove.py
perdoo/cli/: __init__.py  _typer.py  archive.py  process.py  settings.py
perdoo/comic/: __init__.py  comic.py  errors.py
perdoo/comic/archive/: __init__.py  _base.py  rar.py  session.py  sevenzip.py  tar.py  zip.py
perdoo/comic/archives/: __init__.py  _base.py  rar.py  session.py  sevenzip.py  tar.py  zip.py
perdoo/comic/metadata/: __init__.py  _base.py  comic_info.py  metron_info.py
perdoo/metadata/: __init__.py  _base.py  comic_info.py  metron_info.py  naming.py
perdoo/models/: __init__.py  _base.py  comic_info.py  metadata.py  metron_info.py
perdoo/services/: __init__.py  _base.py  comicvine.py  grand_comics_database.py  league.py  marvel.py  metron.py
tests/: comic_test.py  conftest.py  naming_test.py  test_naming.py
tests/comic/: comic_test.py
tests/comic/archives/: base_test.py  conftest.py  tar_test.py  test_session.py  test_sevenzip.py  test_zip.py  zip_test.py
tests/comic/metadata/: base_test.py  comic_info_test.py  metron_info_test.py
tests/services/: comicvine_test.py  marvel_test.py  metron_test.py
